--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Scientific Calculator</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <div>hello world</div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+</head>
+
+<body>
+    <div class="container">
+        <h1 class="mt-3 text-center">Scientific Calculator</h1>
+        <div class="row">
+            <div class="col-12 offset-md-3 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <input 
+                        id="calc-display"
+                        readonly
+                        class="form-control form-control-lg" 
+                        type="text"
+                        aria-label=".form-control-lg example">
+                        <div class="row gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    (
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    )
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    %
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    AC
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
