--- a/index.html
+++ b/index.html
@@ -43,6 +43,86 @@
                                     AC
                                 </button>
                             </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    7
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    8
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    9
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    ÷
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    4
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    5
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    6
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    ×
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    1
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    2
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    3
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    -
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    0
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    .
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">
+                                    =
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2  border">
+                                    +
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
