--- a/index.html
+++ b/index.html
@@ -132,6 +132,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                console.log("document is ready")
+                const display = document.getElementById('calc-display')
+                const buttons = document.getElementsByClassName('btn')
+                console.log(display);
+                console.log(buttons);
+                for (let i=0; i < buttons.length; i++) {
+                    const button = buttons[i];
+                    button.addEventListener('click', function () {
+                        console.log('button clicked:', button.innerText)
+                    })
+                }
+            })
+            
+        </script>
 </body>
 
 </html>
