added button functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <input 
                         id="calc-display"
                         readonly
-                        class="form-control form-control-lg" 
+                        class="form-control form-control-lg text-end" 
                         type="text"
                         aria-label=".form-control-lg example">
                         <div class="row gx-1">
@@ -139,9 +139,39 @@
                 const buttons = document.getElementsByClassName('btn')
                 console.log(display);
                 console.log(buttons);
+
+                let currentValue = "";
+
+                function evaluateResult() {
+                    console.log("currentValue", currentValue);
+                    const convertedValue = currentValue
+                    .replace("×", "*")
+                    .replace("÷", "/")
+                    .replace("%", "*0.01");
+
+                    console.log("convertedValue", convertedValue);
+                    const result = eval(convertedValue);
+                    currentValue = result.toString();
+                    display.value = currentValue; 
+                }
+
                 for (let i=0; i < buttons.length; i++) {
                     const button = buttons[i];
                     button.addEventListener('click', function () {
+                        const value = button.innerText;
+
+                        if (value == "AC") {
+                            currentValue = "";
+                            display.value = currentValue;
+                        } else if (value == '=') {
+                            evaluateResult();
+                        } else {
+                            currentValue += value;
+                            display.value = currentValue
+                        }
+
+                        // currentValue += value;
+                        // display.value = currentValue;
                         console.log('button clicked:', button.innerText)
                     })
                 }
