--- a/src/index.html
+++ b/src/index.html
@@ -1,183 +1,146 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Scientific Calculator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1 class="mt-3 text-center">Scientific Calculator</h1>
-        <div class="row">
-            <div class="col-12 offset-md-3 col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <input 
-                        id="calc-display"
-                        readonly
-                        class="form-control form-control-lg text-end" 
-                        type="text"
-                        aria-label=".form-control-lg example">
-                        <div class="row gx-1">
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    (
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    )
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    %
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    AC
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    7
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    8
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    9
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    ÷
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    4
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    5
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    6
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    ×
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    1
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    2
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    3
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    -
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2 border">
-                                    0
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    .
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">
-                                    =
-                                </button>
-                            </div>
-                            <div class="col-3">
-                                <button type="button" class="btn btn-light w-100 mt-2  border">
-                                    +
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+      <h1 class="mt-3 text-center">Scientific Calculator</h1>
+      <div class="row">
+        <div class="col-12 offset-md-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <input
+                id="calc-display"
+                readonly
+                class="form-control form-control-lg text-end"
+                type="text"
+                aria-label=".form-control-lg example"
+              />
+              <div class="row gx-1">
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    (
+                  </button>
                 </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    )
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    %
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    AC
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    7
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    8
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    9
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    ÷
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    4
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    5
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    6
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    ×
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    1
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    2
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    3
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    -
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    0
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    .
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button"
+                    class="btn btn-primary w-100 mt-2 border border-primary"
+                  >
+                    =
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    +
+                  </button>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-        <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                console.log("document is ready")
-                const display = document.getElementById('calc-display')
-                const buttons = document.getElementsByClassName('btn')
-                console.log(display);
-                console.log(buttons);
-
-                let currentValue = "";
-
-                function evaluateResult() {
-                    console.log("currentValue", currentValue);
-                    const convertedValue = currentValue
-                    .replace("×", "*")
-                    .replace("÷", "/")
-                    .replace("%", "*0.01");
-
-                    console.log("convertedValue", convertedValue);
-                    const result = eval(convertedValue);
-                    currentValue = result.toString();
-                    display.value = currentValue; 
-                }
-
-                for (let i=0; i < buttons.length; i++) {
-                    const button = buttons[i];
-                    button.addEventListener('click', function () {
-                        const value = button.innerText;
-
-                        if (value == "AC") {
-                            currentValue = "";
-                            display.value = currentValue;
-                        } else if (value == '=') {
-                            evaluateResult();
-                        } else {
-                            currentValue += value;
-                            display.value = currentValue
-                        }
-
-                        // currentValue += value;
-                        // display.value = currentValue;
-                        console.log('button clicked:', button.innerText)
-                    })
-                }
-            })
-            
-        </script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
