--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
                 type="text"
                 aria-label=".form-control-lg example"
               />
+              <!-- ROW 1 -->
               <div class="row gx-1">
                 <div class="col-3">
                   <button type="button" class="btn btn-light w-100 mt-2 border">
@@ -47,6 +48,8 @@
                     AC
                   </button>
                 </div>
+
+                <!-- ROW 2 -->
                 <div class="col-3">
                   <button type="button" class="btn btn-light w-100 mt-2 border">
                     7
@@ -67,6 +70,8 @@
                     ÷
                   </button>
                 </div>
+
+                <!-- ROW 3 -->
                 <div class="col-3">
                   <button type="button" class="btn btn-light w-100 mt-2 border">
                     4
@@ -87,6 +92,8 @@
                     ×
                   </button>
                 </div>
+
+                <!-- ROW 4 -->
                 <div class="col-3">
                   <button type="button" class="btn btn-light w-100 mt-2 border">
                     1
@@ -107,6 +114,8 @@
                     -
                   </button>
                 </div>
+
+                <!-- ROW 5 -->
                 <div class="col-3">
                   <button type="button" class="btn btn-light w-100 mt-2 border">
                     0
@@ -130,6 +139,73 @@
                     +
                   </button>
                 </div>
+
+                <!-- ROW 6 -->
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    sin
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    ln
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    π
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    cos
+                  </button>
+                </div>
+
+                <!-- ROW 7 -->
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    log
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    e
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    tan
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button type="button" class="btn btn-light w-100 mt-2 border">
+                    √
+                  </button>
+                </div>
+
+                <!-- ROW 8 -->
+                <div class="col-3">
+                    <button type="button" class="btn btn-light w-100 mt-2 border">
+                      Ans
+                    </button>
+                  </div>
+                  <div class="col-3">
+                    <button type="button" class="btn btn-light w-100 mt-2 border">
+                      EXP
+                    </button>
+                  </div>
+                  <div class="col-3">
+                    <button type="button" class="btn btn-light w-100 mt-2 border">
+                        <span></span>x</span><sup>y</sup>
+                    </button>
+                  </div>
+                  <div class="col-3">
+                    <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">
+                    =
+                    </button>
+                  </div>
+
               </div>
             </div>
           </div>
